## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS		= -I meta/autotools
AUTOMAKE_OPTIONS	= foreign
EXTRA_DIST		= INSTALL
dist_doc_DATA		= README COPYING
AM_CFLAGS		= $(MMUX_CFLAGS)
AM_CPPFLAGS		=  -I$(srcdir)/src/ -I$(builddir)/src/
AM_CPPFLAGS		+= -I$(builddir)/mmux-cc-types/src
CLEANFILES		=
DISTCLEANFILES		=
BUILT_SOURCES		=

SUBDIRS			= $(subdirs)

## --------------------------------------------------------------------

nodist_pkgconfig_DATA	= meta/scripts/mmux-cc-libc.pc


#### GNU m4 macros

EXTRA_DIST		+= \
	$(top_srcdir)/src/m4/macros-for-cc.m4	\
	$(top_srcdir)/src/m4/mmux-cc-libc-config.m4.in

MMUX_M4_FLAGS		=  $(M4FLAGS) --prefix-builtins --include=$(srcdir)/src/m4/
MMUX_M4_FLAGS		+= --include=$(builddir)/src/ --include=$(builddir)/src/m4

# These  are  used  to  preprocess C  language  files  with  extension
# ".c.m4".  Do not change the order of inclusion!!!
#
MMUX_M4_CC_MACROS	= \
	$(top_srcdir)/src/m4/macros-for-cc.m4	\
	$(builddir)/src/m4/mmux-cc-libc-config.m4


#### Automake dirstamp files

MMUX_AM_DIRSTAMP_FILES	=src/m4/$(am__dirstamp)

BUILT_SOURCES		+= $(MMUX_AM_DIRSTAMP_FILES)
DISTCLEANFILES		+= $(MMUX_AM_DIRSTAMP_FILES)

src/m4/$(am__dirstamp):
	@$(MKDIR_P) src/m4/
	@: > $(@)


#### support for GNU Emacs

# if WANT_EMACS
# sharelispdir		= $(datadir)/emacs/site-lisp
# dist_sharelisp_LISP	= src/emacs/mmux-cc-libc.el
# endif


#### documentation

AM_MAKEINFOFLAGS	= --no-split
AM_MAKEINFOHTMLFLAGS	= --split=node -c WORDS_IN_PAGE=0 --css-ref=mmux-cc-libc.css \
	-c PRE_BODY_CLOSE="<p>This document describes version <tt>$(PACKAGE_VERSION)</tt> of <em>$(PACKAGE_NAME)</em>.</p>"

info_TEXINFOS		=  doc/mmux-cc-libc.texi
EXTRA_DIST		+= doc/mmux-cc-libc.style.css
CLEANFILES		+= doc/mmux-cc-libc.css

doc_mmux_cc_libc_TEXINFOS	= \
	doc/macros.texi			\
	doc/overview-linking.texi	\
	doc/mmux-version.texi		\
	doc/gpl-3.0.texi		\
	doc/fdl-1.3.texi

## --------------------------------------------------------------------

doc/mmux-cc-libc.html/$(am__dirstamp): doc/$(am__dirstamp)
	@$(MKDIR_P) doc/mmux-cc-libc.html/
	@: > doc/mmux-cc-libc.html/$(am__dirstamp)

doc/mmux-cc-libc.html/mmux-cc-libc.css: \
	doc/mmux-cc-libc.style.css doc/mmux-cc-libc.html/$(am__dirstamp)
	$(INSTALL) -m 0444 "$(top_srcdir)/doc/mmux-cc-libc.style.css" "$(builddir)/doc/mmux-cc-libc.html/mmux-cc-libc.css"

## --------------------------------------------------------------------

html-local: doc/mmux-cc-libc.html/mmux-cc-libc.css

install-html-local:
	$(MKDIR_P) "$(DESTDIR)$(htmldir)/mmux-cc-libc.html/"
	$(INSTALL) -m 0444 $(builddir)/doc/mmux-cc-libc.html/mmux-cc-libc.css "$(DESTDIR)$(htmldir)/mmux-cc-libc.html/"


#### libraries

EXTRA_DIST	+= \
	src/mmux-cc-libc.h.m4				\
	src/mmux-cc-libc-internals.h.m4			\
	src/mmux-cc-libc-constants.h.m4			\
	src/mmux-cc-libc-functions.h.m4			\
	src/mmux-cc-libc-characters.c.m4		\
	src/mmux-cc-libc-errors.c.m4			\
	src/mmux-cc-libc-file-descriptors.c.m4		\
	src/mmux-cc-libc-file-system.c.m4		\
	src/mmux-cc-libc-library.c.m4			\
	src/mmux-cc-libc-memory.c.m4			\
	src/mmux-cc-libc-persona.c.m4			\
	src/mmux-cc-libc-processes.c.m4			\
	src/mmux-cc-libc-sockets.c.m4			\
	src/mmux-cc-libc-strings.c.m4			\
	src/mmux-cc-libc-system-configuration.c.m4	\
	src/mmux-cc-libc-time.c.m4

MMUX_CC_TYPES_BUILT_SOURCES	= \
	src/mmux-cc-libc.h				\
	src/mmux-cc-libc-internals.h			\
	src/mmux-cc-libc-constants.h			\
	src/mmux-cc-libc-functions.h			\
	src/mmux-cc-libc-characters.c			\
	src/mmux-cc-libc-errors.c			\
	src/mmux-cc-libc-file-descriptors.c		\
	src/mmux-cc-libc-file-system.c			\
	src/mmux-cc-libc-library.c			\
	src/mmux-cc-libc-memory.c			\
	src/mmux-cc-libc-persona.c			\
	src/mmux-cc-libc-processes.c			\
	src/mmux-cc-libc-sockets.c			\
	src/mmux-cc-libc-strings.c			\
	src/mmux-cc-libc-system-configuration.c		\
	src/mmux-cc-libc-time.c

BUILT_SOURCES	+= $(MMUX_CC_TYPES_BUILT_SOURCES)
CLEANFILES	+= $(MMUX_CC_TYPES_BUILT_SOURCES)
DISTCLEANFILES	+= $(MMUX_CC_TYPES_BUILT_SOURCES)

mmux_cc_libc_CURRENT		= @mmux_cc_libc_VERSION_INTERFACE_CURRENT@
mmux_cc_libc_REVISION		= @mmux_cc_libc_VERSION_INTERFACE_REVISION@
mmux_cc_libc_AGE		= @mmux_cc_libc_VERSION_INTERFACE_AGE@
mmux_cc_libc_LINKER_VERSION	= -version-info $(mmux_cc_libc_CURRENT):$(mmux_cc_libc_REVISION):$(mmux_cc_libc_AGE)

include_HEADERS				= \
	src/mmux-cc-libc.h			\
	src/mmux-cc-libc-config.h		\
	src/mmux-cc-libc-constants.h		\
	src/mmux-cc-libc-functions.h

lib_LTLIBRARIES			= libmmux-cc-libc.la
libmmux_cc_libc_la_CPPFLAGS	= $(AM_CPPFLAGS) -I$(builddir)/src
libmmux_cc_libc_la_CFLAGS	= $(AM_CFLAGS) $(BASH_CFLAGS)
libmmux_cc_libc_la_LDFLAGS	= $(mmux_cc_libc_LINKER_VERSION) $(AM_LDFLAGS)
libmmux_cc_libc_la_LIBADD	= mmux-cc-types/libmmux-cc-types.la
libmmux_cc_libc_la_SOURCES	= \
	src/mmux-cc-libc.h				\
	src/mmux-cc-libc-config.h			\
	src/mmux-cc-libc-internals.h			\
	src/mmux-cc-libc-constants.h			\
	src/mmux-cc-libc-functions.h			\
	src/mmux-cc-libc-characters.c			\
	src/mmux-cc-libc-errors.c			\
	src/mmux-cc-libc-file-descriptors.c		\
	src/mmux-cc-libc-file-system.c			\
	src/mmux-cc-libc-library.c			\
	src/mmux-cc-libc-memory.c			\
	src/mmux-cc-libc-persona.c			\
	src/mmux-cc-libc-processes.c			\
	src/mmux-cc-libc-sockets.c			\
	src/mmux-cc-libc-strings.c			\
	src/mmux-cc-libc-system-configuration.c		\
	src/mmux-cc-libc-time.c

.PHONY: library

library: libmmux-cc-libc.la

src/%.h: src/%.h.m4 $(MMUX_M4_CC_MACROS)
	$(M4_PROGRAM) $(MMUX_M4_FLAGS) $(MMUX_M4_CC_MACROS) $< >$@

src/%.c: src/%.c.m4 $(MMUX_M4_CC_MACROS)
	$(M4_PROGRAM) $(MMUX_M4_FLAGS) $(MMUX_M4_CC_MACROS) $< >$@

src/%.$(OBJEXT): \
	src/mmux-cc-libc-internals.h		\
	src/mmux-cc-libc-constants.h		\
	src/mmux-cc-libc-functions.h		\
	src/mmux-cc-libc-config.h


#### TESTS

check_PROGRAMS	= \
	tests/version

TESTS				= $(check_PROGRAMS)

mmux_cc_libc_tests_cppflags	= $(AM_CPPFLAGS) -I$(srcdir)/tests
mmux_cc_libc_tests_ldadd	= $(AM_LDFLAGS) libmmux-cc-libc.la

## ------------------------------------------------------------------------

tests_version_CPPFLAGS		= $(mmux_cc_libc_tests_cppflags)
tests_version_LDADD		= $(mmux_cc_libc_tests_ldadd)


#### interface to "make installcheck"

installcheck-local: $(TESTS)
	@RV=0							;\
	for FILE in $(TESTS)					;\
	do echo "running: '$(builddir)/$$FILE'"			;\
	    if ! "$(builddir)/$$FILE"				;\
	    then RV=$$?; break					;\
	    fi							;\
	done							;\
	if test "$$RV" = 77; then exit 0; else exit $$RV; fi	;


#### common rules

include $(top_srcdir)/meta/automake/mmux-makefile-rules

### end of file
