# @configure_input@
#

AC_PREREQ([2.72])
MMUX_PKG_VERSIONS([0],[1],[0],[devel.0])
AC_INIT([MMUX CC Libc],[MMUX_PACKAGE_VERSION],
  [mrc.mgg@gmail.com],
  [mmux-cc-libc],[https://github.com/marcomaggi/mmux-cc-libc])
MMUX_INIT
MMUX_LIBTOOL_LIBRARY_VERSIONS([mmux_cc_libc],0,0,0)
AC_REVISION([0.1])
AC_COPYRIGHT([Copyright (c) 2024, 2025 Marco Maggi <mrc.mgg@gmail.com>

This program is free software: you  can redistribute it and/or modify it
under  the  terms of  the GNU  General Public  License as  published  by
the Free  Software Foundation, either version  3 of the License,  or (at
your option) any later version.

This program  is distributed  in the  hope that it  will be  useful, but
WITHOUT   ANY   WARRANTY;  without   even   the   implied  warranty   of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser
General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
])

AC_CONFIG_SRCDIR([src/])
AC_CONFIG_MACRO_DIR([meta/autotools])
AC_CONFIG_AUX_DIR([meta/autotools])
AC_USE_SYSTEM_EXTENSIONS
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([1.17 foreign subdir-objects])
AM_MAINTAINER_MODE

AM_PROG_AR
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P

LT_PREREQ([2.4.7])
LT_INIT([disable-static])


#### basic system inspection

MMUX_CHECK_TARGET_OS
AX_IS_RELEASE([git-directory])

AC_LANG([C])
MMUX_LANG_C11

AM_PROG_AS
AM_PROG_CC_C_O
AC_PATH_PROG([M4_PROGRAM],[m4])

AC_CACHE_SAVE


#### external libraries

PKG_PREREQ([0.29])
PKG_INSTALLDIR
MMUX_CHECK_PKG_CONFIG_MACROS

AC_CHECK_HEADERS([libgen.h])

AC_SEARCH_LIBS(cos, m,, [AC_MSG_ERROR([Cannot find libm])])

AC_CACHE_SAVE


#### inspecting functions and data structured

# These are not checked in the "mmux.m4" file, even though the common includes have them.
AC_CHECK_HEADERS([grp.h pwd.h utime.h sys/uio.h sys/socket.h sys/un.h netinet/in.h net/if.h arpa/inet.h
                  netdb.h sys/resource.h])

AC_CHECK_FUNCS([mempcpy memrchr strnlen strndup stpncpy strcasecmp strncasecmp strverscmp
                rawmemchr memmem strchrnul basename dirname canonicalize_file_name
                renameat2 group_member dup3 accept4 copy_file_range gettid prlimit])

MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_RLIMIT],       [sizeof(struct rlimit)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_PASSWD],       [sizeof(struct passwd)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_GROUP],        [sizeof(struct group)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_STAT],         [sizeof(struct stat)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_UTIMBUF],      [sizeof(struct utimbuf)])

MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_TIMEVAL],      [sizeof(struct timeval)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_TIMESPEC],     [sizeof(struct timespec)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_TM],           [sizeof(struct tm)])

MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_IOVEC],        [sizeof(struct iovec)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_FLOCK],        [sizeof(struct flock)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_FD_SET],       [sizeof(fd_set)])

MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_IN_ADDR],      [sizeof(struct in_addr)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_IN6_ADDR],     [sizeof(struct in6_addr)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_SOCKADDR_UN],  [sizeof(struct sockaddr_un)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_SOCKADDR_IN],  [sizeof(struct sockaddr_in)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_SOCKADDR_IN6], [sizeof(struct sockaddr_in6)])

MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_HOSTENT],      [sizeof(struct hostent)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_SERVENT],      [sizeof(struct servent)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_PROTOENT],     [sizeof(struct protoent)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_NETENT],       [sizeof(struct netent)])

MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_IF_NAMEINDEX], [sizeof(struct if_nameindex)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_ADDRINFO],     [sizeof(struct addrinfo)])
MMUX_CC_DETERMINE_VALUEOF([SIZEOF_STRUCT_LINGER],       [sizeof(struct linger)])


#### inspecting errno constants

AC_DEFUN([MMUX_ERRNO_TEST],[MMUX_CC_DETERMINE_VALUEOF([$1],[$1],[MMUX_CC_COMMON_INCLUDES_FOR_TESTS])])
AC_DEFUN([MMUX_ERRNO_TESTS],[m4_map_args_w($1,[MMUX_ERRNO_TEST(],[)])])

MMUX_ERRNO_TESTS([EPERM ENOENT ESRCH EINTR EIO ENXIO E2BIG ENOEXEC EBADF ECHILD EAGAIN ENOMEM
                  EACCES EFAULT ENOTBLK EBUSY EEXIST EXDEV ENODEV ENOTDIR EISDIR EINVAL ENFILE
                  EMFILE ENOTTY ETXTBSY EFBIG ENOSPC ESPIPE EROFS EMLINK EPIPE EDOM ERANGE EDEADLK
                  ENAMETOOLONG ENOLCK ENOSYS ENOTEMPTY ELOOP EWOULDBLOCK ENOMSG EIDRM ECHRNG
                  EL2NSYNC EL3HLT EL3RST ELNRNG EUNATCH ENOCSI EL2HLT EBADE EBADR EXFULL ENOANO
                  EBADRQC EBADSLT EDEADLOCK EBFONT ENOSTR ENODATA ETIME ENOSR ENONET ENOPKG EREMOTE
                  ENOLINK EADV ESRMNT ECOMM EPROTO EMULTIHOP EDOTDOT EBADMSG EOVERFLOW ENOTUNIQ EBADFD
                  EREMCHG ELIBACC ELIBBAD ELIBSCN ELIBMAX ELIBEXEC EILSEQ ERESTART ESTRPIPE EUSERS ENOTSOCK
                  EDESTADDRREQ EMSGSIZE EPROTOTYPE ENOPROTOOPT EPROTONOSUPPORT ESOCKTNOSUPPORT EOPNOTSUPP
                  EPFNOSUPPORT EAFNOSUPPORT EADDRINUSE EADDRNOTAVAIL ENETDOWN ENETUNREACH ENETRESET
                  ECONNABORTED ECONNRESET ENOBUFS EISCONN ENOTCONN ESHUTDOWN ETOOMANYREFS ETIMEDOUT
                  ECONNREFUSED EHOSTDOWN EHOSTUNREACH EALREADY EINPROGRESS ESTALE EUCLEAN ENOTNAM
                  ENAVAIL EISNAM EREMOTEIO EDQUOT ENOMEDIUM EMEDIUMTYPE ECANCELED ENOKEY
                  EKEYEXPIRED EKEYREVOKED EKEYREJECTED EOWNERDEAD ENOTRECOVERABLE])

AC_CACHE_SAVE


#### inspecting constants

AC_DEFUN([MMUX_CONSTANT_TEST],[MMUX_CC_DETERMINE_VALUEOF([$1],[$1],[MMUX_CC_COMMON_INCLUDES_FOR_TESTS])])
AC_DEFUN([MMUX_CONSTANT_TESTS],[m4_map_args_w($1,[MMUX_CONSTANT_TEST(],[)])])

## seek whence arguments
MMUX_CONSTANT_TESTS([SEEK_SET SEEK_CUR SEEK_END SEEK_DATA SEEK_HOLE])
AC_CACHE_SAVE

## file descriptor related flags
MMUX_CONSTANT_TESTS([O_ACCMODE O_APPEND O_ASYNC O_CREAT O_EXCL
     O_EXEC O_EXLOCK O_FSYNC O_IGNORE_CTTY O_NDELAY O_NOCTTY O_NOLINK
     O_NONBLOCK O_NOTRANS O_RDONLY O_RDWR O_READ O_SHLOCK O_SYNC
     O_TRUNC O_WRITE O_WRONLY])
MMUX_CONSTANT_TESTS([O_DSYNC O_PATH O_TMPFILE])
## this is GNU specific
MMUX_CONSTANT_TEST([O_NOATIME])
## these are Linux specific
MMUX_CONSTANT_TESTS([O_CLOEXEC O_DIRECT O_DIRECTORY O_LARGEFILE O_NOFOLLOW])
MMUX_CONSTANT_TESTS([RWF_APPEND RWF_DSYNC RWF_HIPRI RWF_NOWAIT RWF_SYNC])

AC_CACHE_SAVE

## ioctl action selection
MMUX_CONSTANT_TESTS([F_DUPFD F_GETFD F_GETFL F_GETLK
     F_GETOWN F_SETFD F_SETFL F_SETLKW F_SETLK F_SETOWN F_OFD_SETLK F_OFD_SETLKW F_OFD_GETLK
     F_RDLCK F_UNLCK F_WRLCK
     FD_CLOEXEC])
AC_CACHE_SAVE

## miscellaneous file-related constants
MMUX_CONSTANT_TESTS([R_OK W_OK X_OK F_OK])
AC_CACHE_SAVE

## mode bits
MMUX_CONSTANT_TESTS([S_IRUSR S_IWUSR S_IXUSR S_IRGRP S_IWGRP
     S_IXGRP S_IROTH S_IWOTH S_IXOTH S_IRWXU S_IRWXG S_IRWXO
     S_ISUID S_ISGID S_ISVTX])
AC_CACHE_SAVE

## ioctl stuff
MMUX_CONSTANT_TESTS([SIOCATMARK])

## file system stuff
MMUX_CONSTANT_TESTS([AT_FDCWD AT_EACCESS AT_SYMLINK_FOLLOW AT_SYMLINK_NOFOLLOW AT_EMPTY_PATH AT_REMOVEDIR AT_NOAUTOMOUNT MAXSYMLINKS])
MMUX_CONSTANT_TESTS([RENAME_EXCHANGE RENAME_NOREPLACE RENAME_WITHEOUT])

## networking
MMUX_CONSTANT_TESTS([SOCK_CLOEXEC SOCK_DCCP SOCK_DGRAM SOCK_NONBLOCK SOCK_PACKET SOCK_RAW SOCK_RDM SOCK_SEQPACKET SOCK_STREAM])
MMUX_CONSTANT_TESTS([AF_ALG AF_APPLETALK AF_AX25 AF_BLUETOOTH AF_CAN AF_DECnet AF_FILE AF_IB AF_INET])
MMUX_CONSTANT_TESTS([AF_INET6 AF_IPX AF_KCM AF_KEY AF_LLC AF_LOCAL AF_MPLS AF_NETLINK AF_PACKET AF_PPPOX])
MMUX_CONSTANT_TESTS([AF_RDS AF_TIPC AF_UNIX AF_UNSPEC AF_VSOCK AF_X25 AF_XDP])
MMUX_CONSTANT_TESTS([PF_LOCAL PF_UNIX PF_FILE PF_INET PF_INET6 PF_UNSPEC])
MMUX_CONSTANT_TESTS([SHUT_RD SHUT_WR SHUT_RDWR])
MMUX_CONSTANT_TESTS([MSG_OOB MSG_PEEK MSG_DONTROUTE MSG_CONFIRM MSG_DONTWAIT MSG_EOR MSG_MORE MSG_NOSIGNAL])
MMUX_CONSTANT_TESTS([IFNAMSIZ])
MMUX_CONSTANT_TESTS([SOL_SOCKET SO_BROADCAST SO_DEBUG SO_DONTROUTE SO_ERROR SO_KEEPALIVE SO_LINGER])
MMUX_CONSTANT_TESTS([SO_OOBINLINE SO_RCVBUF SO_REUSEADDR SO_SNDBUF SO_TYPE])
MMUX_CONSTANT_TESTS([INADDR_ANY INADDR_BROADCAST INADDR_LOOPBACK INADDR_NONE])
MMUX_CONSTANT_TESTS([AI_ADDRCONFIG AI_ALL AI_CANONIDN  AI_CANONNAME AI_IDN])
MMUX_CONSTANT_TESTS([AI_NUMERICSERV AI_PASSIVE AI_V4MAPPED])

MMUX_CONSTANT_TESTS([NI_DGRAM NI_IDN NI_NAMEREQD NI_NOFQDN NI_NUMERICHOST NI_NUMERICSERV])

MMUX_CONSTANT_TESTS([IPPROTO_AH IPPROTO_BEETPH IPPROTO_COMP IPPROTO_DCCP IPPROTO_EGP IPPROTO_ENCAP])
MMUX_CONSTANT_TESTS([IPPROTO_ESP IPPROTO_ETHERNET IPPROTO_GRE IPPROTO_ICMP IPPROTO_IDP IPPROTO_IGMP])
MMUX_CONSTANT_TESTS([IPPROTO_IP IPPROTO_IPIP IPPROTO_IPV6 IPPROTO_MPLS IPPROTO_MPTCP IPPROTO_MTP])
MMUX_CONSTANT_TESTS([IPPROTO_PIM IPPROTO_PUP IPPROTO_RAW IPPROTO_RSVP IPPROTO_SCTP IPPROTO_TCP])
MMUX_CONSTANT_TESTS([IPPROTO_TP IPPROTO_UDP IPPROTO_UDPLITE])

MMUX_CONSTANT_TESTS([IPPORT_BIFFUDP IPPORT_CMDSERVER IPPORT_DAYTIME IPPORT_DISCARD IPPORT_ECHO
                     IPPORT_EFSSERVER IPPORT_EXECSERVER IPPORT_FINGER IPPORT_FTP IPPORT_LOGINSERVER
                     IPPORT_MTP IPPORT_NAMESERVER IPPORT_NETSTAT IPPORT_RESERVED IPPORT_RJE
                     IPPORT_ROUTESERVER IPPORT_SMTP IPPORT_SUPDUP IPPORT_SYSTAT IPPORT_TELNET
                     IPPORT_TFTP IPPORT_TIMESERVER IPPORT_TTYLINK IPPORT_USERRESERVED IPPORT_WHOIS IPPORT_WHOSERVER])

## system configuration
MMUX_CONSTANT_TESTS([_SC_2_CHAR_TERM _SC_2_C_BIND _SC_2_C_DEV _SC_2_C_VERSION _SC_2_FORT_DEV _SC_2_FORT_RUN
                     _SC_2_LOCALEDEF _SC_2_PBS _SC_2_PBS_ACCOUNTING _SC_2_PBS_CHECKPOINT _SC_2_PBS_LOCATE _SC_2_PBS_MESSAGE
                     _SC_2_PBS_TRACK _SC_2_SW_DEV _SC_2_UPE _SC_2_VERSION _SC_ADVISORY_INFO _SC_AIO_LISTIO_MAX
                     _SC_AIO_MAX _SC_AIO_PRIO_DELTA_MAX _SC_ARG_MAX _SC_ASYNCHRONOUS_IO _SC_ATEXIT_MAX _SC_AVPHYS_PAGES
                     _SC_BARRIERS _SC_BASE _SC_BC_BASE_MAX _SC_BC_DIM_MAX _SC_BC_SCALE_MAX _SC_BC_STRING_MAX _SC_CHARCLASS_NAME_MAX
                     _SC_CHAR_BIT _SC_CHAR_MAX _SC_CHAR_MIN _SC_CHILD_MAX _SC_CLK_TCK _SC_CLOCK_SELECTION _SC_COLL_WEIGHTS_MAX
                     _SC_CPUTIME _SC_C_LANG_SUPPORT _SC_C_LANG_SUPPORT_R _SC_DELAYTIMER_MAX _SC_DEVICE_IO _SC_DEVICE_SPECIFIC
                     _SC_DEVICE_SPECIFIC_R _SC_EQUIV_CLASS_MAX _SC_EXPR_NEST_MAX _SC_FD_MGMT _SC_FIFO _SC_FILE_ATTRIBUTES
                     _SC_FILE_LOCKING _SC_FILE_SYSTEM _SC_FSYNC _SC_GETGR_R_SIZE_MAX _SC_GETPW_R_SIZE_MAX _SC_HOST_NAME_MAX
                     _SC_INT_MAX _SC_INT_MIN _SC_IOV_MAX _SC_IPV6 _SC_JOB_CONTROL _SC_LEVEL1_DCACHE_ASSOC _SC_LEVEL1_DCACHE_LINESIZE
                     _SC_LEVEL1_DCACHE_SIZE _SC_LEVEL1_ICACHE_ASSOC _SC_LEVEL1_ICACHE_LINESIZE _SC_LEVEL1_ICACHE_SIZE
                     _SC_LEVEL2_CACHE_ASSOC _SC_LEVEL2_CACHE_LINESIZE _SC_LEVEL2_CACHE_SIZE _SC_LEVEL3_CACHE_ASSOC
                     _SC_LEVEL3_CACHE_LINESIZE _SC_LEVEL3_CACHE_SIZE _SC_LEVEL4_CACHE_ASSOC _SC_LEVEL4_CACHE_LINESIZE
                     _SC_LEVEL4_CACHE_SIZE _SC_LINE_MAX _SC_LOGIN_NAME_MAX _SC_LONG_BIT _SC_MAPPED_FILES _SC_MB_LEN_MAX
                     _SC_MEMLOCK _SC_MEMLOCK_RANGE _SC_MEMORY_PROTECTION _SC_MESSAGE_PASSING _SC_MONOTONIC_CLOCK
                     _SC_MQ_OPEN_MAX _SC_MQ_PRIO_MAX _SC_MULTI_PROCESS _SC_NETWORKING _SC_NGROUPS_MAX _SC_NL_ARGMAX
                     _SC_NL_LANGMAX _SC_NL_MSGMAX _SC_NL_NMAX _SC_NL_SETMAX _SC_NL_TEXTMAX _SC_NPROCESSORS_CONF
                     _SC_NPROCESSORS_ONLN _SC_NZERO _SC_OPEN_MAX _SC_PAGESIZE _SC_PAGE_SIZE _SC_PASS_MAX _SC_PHYS_PAGES
                     _SC_PII _SC_PII_INTERNET _SC_PII_INTERNET_DGRAM _SC_PII_INTERNET_STREAM _SC_PII_OSI _SC_PII_OSI_CLTS
                     _SC_PII_OSI_COTS _SC_PII_OSI_M _SC_PII_SOCKET _SC_PII_XTI _SC_PIPE _SC_POLL _SC_PRIORITIZED_IO
                     _SC_PRIORITY_SCHEDULING _SC_RAW_SOCKETS _SC_READER_WRITER_LOCKS _SC_REALTIME_SIGNALS _SC_REGEXP
                     _SC_REGEX_VERSION _SC_RE_DUP_MAX _SC_RTSIG_MAX _SC_SAVED_IDS _SC_SCHAR_MAX _SC_SCHAR_MIN _SC_SELECT
                     _SC_SEMAPHORES _SC_SEM_NSEMS_MAX _SC_SEM_VALUE_MAX _SC_SHARED_MEMORY_OBJECTS _SC_SHELL _SC_SHRT_MAX
                     _SC_SHRT_MIN _SC_SIGNALS _SC_SIGQUEUE_MAX _SC_SINGLE_PROCESS _SC_SPAWN _SC_SPIN_LOCKS _SC_SPORADIC_SERVER
                     _SC_SSIZE_MAX _SC_STREAMS _SC_STREAM_MAX _SC_SYMLOOP_MAX _SC_SYNCHRONIZED_IO _SC_SYSTEM_DATABASE
                     _SC_SYSTEM_DATABASE_R _SC_THREADS _SC_THREAD_ATTR_STACKADDR _SC_THREAD_ATTR_STACKSIZE _SC_THREAD_CPUTIME
                     _SC_THREAD_DESTRUCTOR_ITERATIONS _SC_THREAD_KEYS_MAX _SC_THREAD_PRIORITY_SCHEDULING _SC_THREAD_PRIO_INHERIT
                     _SC_THREAD_PRIO_PROTECT _SC_THREAD_PROCESS_SHARED _SC_THREAD_SAFE_FUNCTIONS _SC_THREAD_SPORADIC_SERVER
                     _SC_THREAD_STACK_MIN _SC_THREAD_THREADS_MAX _SC_TIMEOUTS _SC_TIMERS _SC_TIMER_MAX _SC_TRACE
                     _SC_TRACE_EVENT_FILTER _SC_TRACE_INHERIT _SC_TRACE_LOG _SC_TTY_NAME_MAX _SC_TYPED_MEMORY_OBJECTS _SC_TZNAME_MAX
                     _SC_T_IOV_MAX _SC_UCHAR_MAX _SC_UINT_MAX _SC_UIO_MAXIOV _SC_ULONG_MAX _SC_USER_GROUPS _SC_USER_GROUPS_R
                     _SC_USHRT_MAX _SC_V6_ILP32_OFF32 _SC_V6_ILP32_OFFBIG _SC_V6_LP64_OFF64 _SC_V6_LPBIG_OFFBIG
                     _SC_VERSION _SC_WORD_BIT _SC_XBS5_ILP32_OFF32 _SC_XBS5_ILP32_OFFBIG _SC_XBS5_LP64_OFF64
                     _SC_XBS5_LPBIG_OFFBIG _SC_XOPEN_CRYPT _SC_XOPEN_ENH_I18N _SC_XOPEN_LEGACY _SC_XOPEN_REALTIME
                     _SC_XOPEN_REALTIME_THREADS _SC_XOPEN_SHM _SC_XOPEN_UNIX _SC_XOPEN_VERSION _SC_XOPEN_XCU_VERSION
                     _SC_XOPEN_XPG2 _SC_XOPEN_XPG3 _SC_XOPEN_XPG4])

MMUX_CONSTANT_TESTS([_CS_LFS64_CFLAGS _CS_LFS64_LDFLAGS _CS_LFS64_LIBS _CS_LFS64_LINTFLAGS
                     _CS_LFS_CFLAGS _CS_LFS_LDFLAGS _CS_LFS_LIBS _CS_LFS_LINTFLAGS _CS_PATH])

MMUX_CONSTANT_TESTS([_PC_ASYNC_IO _PC_CHOWN_RESTRICTED _PC_FILESIZEBITS _PC_LINK_MAX _PC_MAX_CANON
                     _PC_MAX_INPUT _PC_NAME_MAX _PC_NO_TRUNC _PC_PATH_MAX _PC_PIPE_BUF _PC_PRIO_IO
                     _PC_REC_INCR_XFER_SIZE _PC_REC_MAX_XFER_SIZE _PC_REC_MIN_XFER_SIZE _PC_REC_XFER_ALIGN
                     _PC_SYNC_IO _PC_VDISABLE])

MMUX_CONSTANT_TESTS([RLIMIT_AS RLIMIT_CORE RLIMIT_CPU RLIMIT_DATA RLIMIT_FSIZE RLIMIT_LOCKS RLIMIT_MEMLOCK
                     RLIMIT_MSGQUEUE RLIMIT_NICE RLIMIT_NOFILE RLIMIT_NPROC RLIMIT_RSS RLIMIT_RTPRIO
                     RLIMIT_RTTIME RLIMIT_SIGPENDING RLIMIT_STACK RLIM_INFINITY])

## miscellaneous
MMUX_CONSTANT_TESTS([EOF FD_SETSIZE])

AC_CACHE_SAVE


#### external packages

AC_ARG_WITH([emacs],
  AS_HELP_STRING([--with-emacs],[enable installation of GNU Emacs module]),
  [true],[with_emacs=no])
AC_MSG_CHECKING([whether GNU Emacs module will be installed])
AS_VAR_IF(with_emacs,'yes',
  [AC_MSG_RESULT([yes])],
  [AC_MSG_RESULT([no])])
AM_CONDITIONAL([WANT_EMACS],[test x$with_emacs = xyes])
AS_VAR_IF(with_emacs,'yes',
  [AM_PATH_LISPDIR])


#### finish

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile]
  [src/mmux-cc-libc-config.h]
  [src/m4/mmux-cc-libc-config.m4]
  [doc/mmux-version.texi]
  [meta/scripts/mmux-cc-libc.pc]
  [meta/slackware/slack-desc])
MMUX_OUTPUT
AC_CONFIG_SUBDIRS([mmux-cc-types])
AC_OUTPUT

### end of file
